--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 
 <body>
 <h1>Megan McPhee</h1>
-<img src="‎⁨iCloud Drive⁩\Desktop⁩\IMG_3824.jpeg"/>
+<img src=“IMG_3824.JPG” alt=“Resume of Kaushik Kr. Samaddar” width=“300” height=“250" />
 
+<h3>I am a Cyber Security Professional looking for opportunities 
+    to further my knowledge in the field. I am currently pursuing my
+    Masters of Science in Cyber Security, as well as, my Masters in 
+    Business Administration. I am a novice to coding, working with 
+    JavaScript and Python mostly, but enjoy it immensely. I work well 
+    in teams or individually. I am a goal oriented person, I multitask
+    projects, and I deliver results. I am a great problem solver which
+    is one reason I chose this profession. I enjoy the Cyber Security 
+    field very much and look forward to a lifelong career.</h3>
 
 </body>
 
