--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Megan McPhee</h1>
-<img src=“IMG_3824.JPG” alt=“Resume of Kaushik Kr. Samaddar” width=“300” height=“250" />
+<img src="IMG_3824.JPG" alt="Lies" width="300" height="250" />
 
 <h3>I am a Cyber Security Professional looking for opportunities 
     to further my knowledge in the field. I am currently pursuing my
