--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Activity 1: Basic HTML Bio</title>
+  <style>
+  
+  </style>
 </head>
 
 <body>
 <h1>Megan McPhee</h1>
-<img src="IMG_3824.JPG" alt="Lies" width="300" height="250" />
+<img src="IMG_3824.jpeg" alt="Lies" width="300" height="250" />
 
 <h3>I am a Cyber Security Professional looking for opportunities 
     to further my knowledge in the field. I am currently pursuing my
@@ -19,6 +22,8 @@
     is one reason I chose this profession. I enjoy the Cyber Security 
     field very much and look forward to a lifelong career.</h3>
 <h4>HOLY POO</h4>
+
+
 </body>
 
 </html>
