--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Activity 1: Basic HTML Bio</title>
-  <style>
-  
-  </style>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
-<h1>Megan McPhee</h1>
-<img src="IMG_3824.jpeg" alt="Lies" width="300" height="250" />
+  <h1>Megan McPhee</h1>
+  <img src="IMG_3824.jpeg" alt="Lies" width="300" height="250" />
 
-<h3>I am a Cyber Security Professional looking for opportunities 
-    to further my knowledge in the field. I am currently pursuing my
-    Masters of Science in Cyber Security, as well as, my Masters in 
-    Business Administration. I am a novice to coding, working with 
-    JavaScript and Python mostly, but enjoy it immensely. I work well 
-    in teams or individually. I am a goal oriented person, I multitask
-    projects, and I deliver results. I am a great problem solver which
-    is one reason I chose this profession. I enjoy the Cyber Security 
-    field very much and look forward to a lifelong career.</h3>
-<h4>HOLY POO</h4>
+  <h3>I am a Cyber Security Professional looking for opportunities 
+    to further my knowledge in the field.</h3>
+    <br>
+  <img src="IMG_3824.jpeg" alt="Lies" width="300" height="250" />
+  <br>
+
+  <h4>I work well 
+  in teams or individually. I am a goal oriented person, I multitask
+  projects, and I deliver results. I am a great problem solver which
+  is one reason I chose this profession. I enjoy the Cyber Security 
+  field very much and look forward to a lifelong career.</h4>
 
 
 </body>
