--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 
 <body>
   <h1>Megan McPhee</h1>
-  <img src="IMG_3824.jpeg" alt="Lies" width="300" height="250" />
 
   <h3>I am a Cyber Security Professional looking for opportunities 
     to further my knowledge in the field.</h3>
     <br>
-  <img src="IMG_3824.jpeg" alt="Lies" width="300" height="250" />
+  <img src="IMG_3824.jpeg" alt="2019 glasses picture with a santa mug" width="300" height="300" />
   <br>
 
   <h4>I work well 
