--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
   <h1>Megan McPhee</h1>
 
-  <h3>I am a Cyber Security Professional looking for opportunities 
-    to further my knowledge in the field.</h3>
+  <h3>I am currently a Cyber Security Analyst for Hewlett Packard Enterprise</h3>
     <br>
   <img src="IMG_3824.jpeg" alt="2019 glasses picture with a santa mug" width="300" height="350" />
   <br>
+
+  <h3 class = links>Resources</h3>
+  <ul>
+    <li><a href="https://www.linkedin.com/in/~meganmcphee/">LinkedIn</a></li>
+    <li><a href="https://github.com/MegMcPhee">GitHub</a></li>
+    <li>Resume
+  </ul>
 
   <h4>I work well 
   in teams or individually. I am a goal oriented person, I multitask
