--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <h3 class = links>Resources</h3>
   <ul>
-    <li><a href="https://www.linkedin.com/in/~meganmcphee/">LinkedIn</a></li>
-    <li><a href="https://github.com/MegMcPhee">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/~meganmcphee/" target="_blank">LinkedIn</a></li>
+    <li><a href="https://github.com/MegMcPhee" target="_blank">GitHub</a></li>
     <li>Resume
   </ul>
 
