--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
   <h3>I am currently a Cyber Security Analyst for Hewlett Packard Enterprise</h3>
     <br>
-  <img src="IMG_3824.jpeg" alt="2019 glasses picture with a santa mug" width="300" height="350" />
+  <img src="IMG_3824.jpeg" alt="2019 glasses picture with a santa mug" width="300" height="350" class="sunglasses" />
   <br>
 
   <h3 class = links>Resources</h3>
   <ul>
     <li><a href="https://www.linkedin.com/in/~meganmcphee/" target="_blank">LinkedIn</a></li>
     <li><a href="https://github.com/MegMcPhee" target="_blank">GitHub</a></li>
-    <li>Resume
+    <li><a href="#">Resume</a>
   </ul>
 
   <h4>I work well 
