--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
   <h1>Megan McPhee</h1>
 
-  <h3>I am currently a Cyber Security Analyst for Hewlett Packard Enterprise</h3>
-    <br>
   <img src="IMG_3824.jpeg" alt="2019 glasses picture with a santa mug" width="300" height="350" class="sunglasses" />
+  <br>
+
+  <h2>Cyber Security Analyst for Hewlett Packard Enterprise</h2>
   <br>
 
   <h3 class = links>Resources</h3>
@@ -21,11 +22,19 @@
     <li><a href="#">Resume</a>
   </ul>
 
-  <h4>I work well 
+  <h4>Attributes</h4>
+  <ul>
+    <li>Team Player</li>
+    <li>Goal Oriented</li>
+    <li>Able to Multitask</li>
+    <li>Problem Solving</li>
+    <li></li>
+  </ul>
+    I work well 
   in teams or individually. I am a goal oriented person, I multitask
   projects, and I deliver results. I am a great problem solver which
   is one reason I chose this profession. I enjoy the Cyber Security 
-  field very much and look forward to a lifelong career.</h4>
+  field very much and look forward to a lifelong career.
 
 
 </body>
